--- a/SPOS/FCFS.ipynb
+++ b/SPOS/FCFS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "062cf469",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "process =  [1, 2, 3]\n",
+      "n =  3\n",
+      "bt =  [10, 5, 8]\n",
+      "wt =  [0, 0, 0]\n",
+      "tat =  [0, 0, 0]\n",
+      "Inside wt = \n",
+      "wt[0] =  0\n",
+      "wt[1] =  10\n",
+      "wt[2] =  15\n",
+      "tat[0] =  10\n",
+      "tat[1] =  15\n",
+      "tat[2] =  23\n",
       "Processes Burst time  Waiting time  Turn around time\n",
       " 1\t\t10\t 0\t\t 10\n",
       " 2\t\t5\t 10\t\t 15\n",
@@ -26,14 +38,18 @@
     "# time for all processes\n",
     "def findWaitingTime(processes, n,\n",
     "                    bt, wt):\n",
-    " \n",
+    "\n",
+    "    print(\"Inside wt = \")\n",
+    "    \n",
     "    # waiting time for\n",
     "    # first process is 0\n",
     "    wt[0] = 0\n",
+    "    print(\"wt[0] = \",wt[0])\n",
     " \n",
     "    # calculating waiting time\n",
     "    for i in range(1, n ):\n",
     "        wt[i] = bt[i - 1] + wt[i - 1]\n",
+    "        print(\"wt[{}] = \".format(i),wt[i]) \n",
     " \n",
     "# Function to calculate turn\n",
     "# around time\n",
@@ -44,6 +60,7 @@
     "    # time by adding bt[i] + wt[i]\n",
     "    for i in range(n):\n",
     "        tat[i] = bt[i] + wt[i]\n",
+    "        print(\"tat[{}] = \".format(i),tat[i])\n",
     " \n",
     "# Function to calculate\n",
     "# average time\n",
@@ -53,6 +70,13 @@
     "    tat = [0] * n\n",
     "    total_wt = 0\n",
     "    total_tat = 0\n",
+    "\n",
+    "    print(\"process = \",processes)\n",
+    "    print(\"n = \",n)\n",
+    "    print(\"bt = \",bt)\n",
+    "\n",
+    "    print(\"wt = \",wt)\n",
+    "    print(\"tat = \",tat)\n",
     " \n",
     "    # Function to find waiting\n",
     "    # time of all processes\n",
@@ -98,121 +122,6 @@
     "    findavgTime(processes, n, burst_time)\n",
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f68eb815",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6b088b6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processes Burst time  Waiting time  Turn around time\n",
-      " 1\t\t10\t 0\t\t 10\n",
-      " 2\t\t5\t 10\t\t 15\n",
-      " 3\t\t8\t 15\t\t 23\n",
-      "Average waiting time = 8.333333333333334\n",
-      "Average turn around time = 16.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# of FCFS scheduling\n",
-    " \n",
-    "# Function to find the waiting\n",
-    "# time for all processes\n",
-    "def findWaitingTime(processes, n,\n",
-    "                    bt, wt):\n",
-    " \n",
-    "    # waiting time for\n",
-    "    # first process is 0\n",
-    "    wt[0] = 0\n",
-    " \n",
-    "    # calculating waiting time\n",
-    "    for i in range(1, n ):\n",
-    "        wt[i] = bt[i - 1] + wt[i - 1]\n",
-    " \n",
-    "# Function to calculate turn\n",
-    "# around time\n",
-    "def findTurnAroundTime(processes, n,\n",
-    "                       bt, wt, tat):\n",
-    " \n",
-    "    # calculating turnaround\n",
-    "    # time by adding bt[i] + wt[i]\n",
-    "    for i in range(n):\n",
-    "        tat[i] = bt[i] + wt[i]\n",
-    " \n",
-    "# Function to calculate\n",
-    "# average time\n",
-    "def findavgTime( processes, n, bt):\n",
-    " \n",
-    "    wt = [0] * n\n",
-    "    tat = [0] * n\n",
-    "    total_wt = 0\n",
-    "    total_tat = 0\n",
-    " \n",
-    "    # Function to find waiting\n",
-    "    # time of all processes\n",
-    "    findWaitingTime(processes, n, bt, wt)\n",
-    " \n",
-    "    # Function to find turn around\n",
-    "    # time for all processes\n",
-    "    findTurnAroundTime(processes, n,\n",
-    "                       bt, wt, tat)\n",
-    " \n",
-    "    # Display processes along\n",
-    "    # with all details\n",
-    "    print( \"Processes Burst time \" +\n",
-    "                  \" Waiting time \" +\n",
-    "                \" Turn around time\")\n",
-    " \n",
-    "    # Calculate total waiting time\n",
-    "    # and total turn around time\n",
-    "    for i in range(n):\n",
-    "     \n",
-    "        total_wt = total_wt + wt[i]\n",
-    "        total_tat = total_tat + tat[i]\n",
-    "        print(\" \" + str(i + 1) + \"\\t\\t\" +\n",
-    "                    str(bt[i]) + \"\\t \" +\n",
-    "                    str(wt[i]) + \"\\t\\t \" +\n",
-    "                    str(tat[i]))\n",
-    " \n",
-    "    print( \"Average waiting time = \"+\n",
-    "                   str(total_wt / n))\n",
-    "    print(\"Average turn around time = \"+\n",
-    "                     str(total_tat / n))\n",
-    " \n",
-    "# Driver code\n",
-    "if __name__ ==\"__main__\":\n",
-    "     \n",
-    "    # process id's\n",
-    "    processes = [ 1, 2, 3]\n",
-    "    n = len(processes)\n",
-    " \n",
-    "    # Burst time of all processes\n",
-    "    burst_time = [10, 5, 8]\n",
-    " \n",
-    "    findavgTime(processes, n, burst_time)\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8db15fdc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
